--- a/api-reference/mocking-framework/mock-behavior-controls.mdx
+++ b/api-reference/mocking-framework/mock-behavior-controls.mdx
@@ -1,251 +1,212 @@
 ---
-title: "Mock Behavior Controls"
-description: "Reference on configuring mock object attitudes (nice, naggy, strict), error handling for unexpected calls, and strategies for balancing warnings and test enforcements. Helps users prevent brittle tests while capturing critical contract violations."
+title: "Controlling Mock Behavior"
+description: "Explains how to manage uninteresting calls using NiceMock, NaggyMock, and StrictMock wrappers, enabling fine-grained control over warnings and errors for unexpected method invocations. Shows how to tune strictness to match your team's testing standards."
 ---
 
-# Mock Behavior Controls
+# Controlling Mock Behavior
 
-Configure and understand how to control the behavior of mock objects with respect to uninteresting calls, error handling, and balancing warnings versus test enforcement. This reference helps you tune your tests to avoid brittleness while ensuring critical contract violations are caught.
+GoogleMock provides powerful tools to control how your mock objects respond to unexpected or uninteresting method invocations. This page explains how to manage mock strictness and control warnings or errors when mock methods are called in ways your tests may not explicitly anticipate.
 
----
+## Understanding Uninteresting vs Unexpected Calls
 
-## Overview of Mock Behavior Attitudes
+In GoogleMock, calls on mock objects fall into two categories:
 
-GoogleMock allows you to configure mock objects in three principal behavior modes to govern how uninteresting calls (calls on mock methods for which there are no expectations) are treated:
+- **Uninteresting calls**: These are calls to mock methods that have *no explicit expectations* (i.e., no `EXPECT_CALL` for that method). The test writer has not expressed interest in these calls.
 
-- **Nice Mocks (`NiceMock<T>`)**  
-  Suppress warnings on uninteresting calls. These mocks quietly accept any call for which there is no explicit expectation, performing the default action without cluttering test output.
+- **Unexpected calls**: These occur when there are one or more `EXPECT_CALL`s set on a method, but none of those expectations match the actual call arguments or invocation count.
 
-- **Naggy Mocks (`NaggyMock<T>`)**  
-  Emit warnings on uninteresting calls. This is the default behavior if you just use the plain mock object. It alerts you to unexpected usage that might suggest missing expectations, but allows tests to continue.
+Uninteresting calls **do not cause test failures by default**, but generate warnings indicating the call was made without an expectation.
+Unexpected calls, however, always cause test failures since they violate explicit expectations.
 
-- **Strict Mocks (`StrictMock<T>`)**  
-  Treat uninteresting calls as test failures. These mocks enforce stricter contracts by failing tests if unexpected method calls happen.
+## The Mock Strictness Wrappers
+
+GoogleMock offers three convenient wrappers to tune how uninteresting calls are handled on a per-mock-object basis:
+
+- **`NiceMock<T>`**: Suppresses warnings for uninteresting calls. Useful when you want to ignore calls you don't care about.
+- **`NaggyMock<T>`**: The default mock behavior that warns on uninteresting calls.
+- **`StrictMock<T>`**: Treats all uninteresting calls as errors, causing tests to fail if any unexpected call is made without an expectation.
+
+Each of these wrappers inherits from the original mock class `T` and alters the behavior on uninteresting calls.
+
+### Using Strictness Wrappers
+
+Here is how you use these wrappers:
 
 ```cpp
 using ::testing::NiceMock;
 using ::testing::NaggyMock;
 using ::testing::StrictMock;
 
-NiceMock<MockFoo> nice_foo;      // No warnings for uninteresting calls.
-NaggyMock<MockFoo> naggy_foo;    // Warnings for uninteresting calls (default).
-StrictMock<MockFoo> strict_foo;  // Fail test on uninteresting calls.
-```
-
-
-## What Is an Uninteresting Call?
-
-An **uninteresting call** occurs when a mock method is invoked for which no `EXPECT_CALL()` expectation exists. The mock will perform its default action, but:
-
-- On a **naggy** mock, gMock prints a warning message.
-- On a **nice** mock, gMock quietly proceeds without warning.
-- On a **strict** mock, gMock treats it as a test failure.
-
-## What Is an Unexpected Call?
-
-An **unexpected call** is when a mock method is called and there *are* existing `EXPECT_CALL` expectations on that method, but none of them matches the actual call arguments. This is always considered a test failure regardless of strictness mode.
-
-## Configuring Uninteresting Call Behavior on a Per-Mock Object Basis
-
-You can programmatically configure the reaction to uninteresting calls on a mock object at runtime using these static methods:
-
-```cpp
-#include <gmock/gmock.h>
-
-// mock_obj is a pointer or raw address of your mock object.
-
-// Allow uninteresting calls without warnings or failures.
-testing::Mock::AllowUninterestingCalls(reinterpret_cast<uintptr_t>(mock_obj));
-
-// Warn when an uninteresting call happens (default behavior).
-testing::Mock::WarnUninterestingCalls(reinterpret_cast<uintptr_t>(mock_obj));
-
-// Fail tests on uninteresting calls.
-testing::Mock::FailUninterestingCalls(reinterpret_cast<uintptr_t>(mock_obj));
-```
-
-Use these carefully to balance catching errors versus avoiding test brittleness.
-
-## Balancing Warnings and Test Enforcement
-
-Using **naggy mocks** allows you to be alerted to uninteresting calls without failing tests outright. This is helpful during test development or debugging when your mocks may not be fully specified.
-
-**Strict mocks** enforce rigorous contract adherence, ensuring no unplanned interactions occur. Use them when tests need exact call discipline, typically in later-stage or critical tests.
-
-**Nice mocks** help suppress noise from unimportant calls, keeping tests clean and focusing on expected call verification.
-
-<Info>
-When anchoring tests with complex dependencies or evolving APIs, prefer starting with nice mocks to keep tests resilient, then selectively add expectations or switch to stricter modes for areas where precision matters most.
-</Info>
-
----
-
-## Common Scenarios and Best Practices
-
-### 1. Suppressing Noisy Warnings
-
-If your test output is cluttered with messages like:
-
-```
-GMOCK WARNING:
-Uninteresting mock function call - returning default value.
-```
-
-Consider wrapping your mock with `NiceMock<>` or adding catch-all expectations:
-
-```cpp
-EXPECT_CALL(mock, Foo(_)).Times(AnyNumber());
-```
-
-### 2. Enforcing Call Expectations Strictly
-
-When your test must ensure no unexpected calls, use `StrictMock<>` or configure failure reaction manually.
-
-### 3. Selectively Expecting Calls
-
-Use `EXPECT_CALL` to explicitly specify expectations on interesting methods, and leave others to default behavior.
-
-### 4. Handling Uninteresting Calls When Using Default Behavior
-
-If your uninteresting calls need custom default behavior, pair `ON_CALL` with `WillByDefault` to tailor responses, e.g.: 
-
-```cpp
-ON_CALL(mock, SomeMethod(_)).WillByDefault(Return(true));
-EXPECT_CALL(mock, SomeMethod(42));
-```
-
-### 5. Avoid Suppressing Real Errors with Blanket Expectations
-
-Do *not* silence warnings by adding `EXPECT_CALL(...).Times(AnyNumber())` on every method carelessly. This weakens tests and hides real bugs.
-
-<Warning>
-Adding catch-all expectations to hide uninteresting-call warnings compromises test integrity. Use sparingly and intentionally.
-</Warning>
-
----
-
-## Technical Details
-
-- The default mock attitude is currently **naggy**.
-- Using `NiceMock<T>` suppresses uninteresting-call warnings for `T`.
-- Using `StrictMock<T>` promotes uninteresting calls to errors.
-- Mock objects maintain internal reaction settings which determine how uninteresting calls are handled.
-- You can check the current attitude of a mock using:
-
-```cpp
-bool is_nice = testing::Mock::IsNice(mock_obj);
-bool is_naggy = testing::Mock::IsNaggy(mock_obj);
-bool is_strict = testing::Mock::IsStrict(mock_obj);
-```
-
-- The mock reactions are maintained in thread-safe global registries.
-
-## Cleaning Up: Verifying and Clearing Expectations
-
-You can force verification of all expectations on a mock at any point, rather than waiting for destruction:
-
-```cpp
-bool verified = testing::Mock::VerifyAndClearExpectations(&mock_obj);
-```
-
-Or clear both expectations and default actions:
-
-```cpp
-bool verified = testing::Mock::VerifyAndClear(&mock_obj);
-```
-
-After verification and clearing, do *not* add new expectations to the mock.
-
-## API Summary for Behavior Control
-
-| Method                            | Description                                            |
-| -------------------------------- | ------------------------------------------------------ |
-| `Mock::AllowUninterestingCalls(uintptr_t mock_obj)` | Allow uninteresting calls without warnings or failure. |
-| `Mock::WarnUninterestingCalls(uintptr_t mock_obj)`  | Warn on uninteresting calls (default).                  |
-| `Mock::FailUninterestingCalls(uintptr_t mock_obj)`  | Fail test on uninteresting calls.                       |
-| `Mock::AllowLeak(const void* mock_obj)`              | Ignore leaks of this mock object (skips verification). |
-| `Mock::VerifyAndClearExpectations(void* mock_obj)`   | Verify and clear expectations on mock.                  |
-| `Mock::VerifyAndClear(void* mock_obj)`               | Verify and clear expectations and default actions.     |
-
----
-
-## Practical Example
-
-```cpp
-#include <gmock/gmock.h>
-using ::testing::NiceMock;
-using ::testing::StrictMock;
-using ::testing::Return;
-
+// Original mock class
 class MockFoo {
  public:
-  MOCK_METHOD(int, GetValue, (), ());
+  MOCK_METHOD(void, DoThis, (), ());
+  MOCK_METHOD(int, GetValue, (), (const));
 };
 
-TEST(MockBehaviorTest, UsingNiceMock) {
-  NiceMock<MockFoo> nice_foo;
-  EXPECT_CALL(nice_foo, GetValue())
-      .WillOnce(Return(42));
-
-  // Uninteresting calls to other methods on nice_foo won't print warnings.
-  int val = nice_foo.GetValue();  // Returns 42
+TEST(MyTest, NiceMockSuppressesWarnings) {
+  NiceMock<MockFoo> mock_foo;
+  // No EXPECT_CALL on DoThis(), but calling it won't print warnings.
+  mock_foo.DoThis();
 }
 
-TEST(MockBehaviorTest, UsingStrictMock) {
-  StrictMock<MockFoo> strict_foo;
-  EXPECT_CALL(strict_foo, GetValue())
-      .WillOnce(Return(24));
-
-  // Any uninteresting calls will cause the test to fail.
-  int val = strict_foo.GetValue();  // Returns 24
-  // strict_foo.OtherMethod();  // Would cause failure if called.
+TEST(MyTest, NaggyMockWarnsWithoutExpectations) {
+  NaggyMock<MockFoo> mock_foo;
+  // Warning will be printed if DoThis() is called without expectations.
+  mock_foo.DoThis();
 }
 
-TEST(MockBehaviorTest, ConfiguringAtRuntime) {
-  MockFoo foo;
-  testing::Mock::WarnUninterestingCalls(reinterpret_cast<uintptr_t>(&foo));
-  EXPECT_CALL(foo, GetValue())
-      .WillOnce(Return(7));
-
-  int val = foo.GetValue();  // Returns 7
-  // Uninteresting calls emit warnings, not failures.
+TEST(MyTest, StrictMockFailsOnUninterestingCalls) {
+  StrictMock<MockFoo> mock_foo;
+  // Test will fail if DoThis() is called without expectations.
+  mock_foo.DoThis();  // Fails the test
 }
 ```
 
+### When to Use Each Wrapper
+
+- Use **`NiceMock`** when your test is not concerned about all method calls or to reduce noise when testing.
+- Stick to **`NaggyMock`** (the default) during development to be aware of unexpected interactions.
+- Use **`StrictMock`** for tests that must precisely verify every interaction and reject any unplanned calls.
+
+**Tip:** `NiceMock` and `StrictMock` wrappers only affect uninteresting calls (no `EXPECT_CALL`). Calls that violate expectations will always fail, regardless of the wrapper.
+
+## How Wrappers Work Internally
+
+Each wrapper configures the mock object's internal reaction to uninteresting calls by registering its behavior:
+
+- `NiceMock` instructs the framework to allow uninteresting calls silently.
+- `NaggyMock` triggers warnings.
+- `StrictMock` causes failures.
+
+This behavior is scoped to the mock object instance, allowing fine-grained control.
+
+## Customizing with `EXPECT_CALL` for Uninteresting Methods
+
+If you want the mock to silently accept calls on a specific method without strict verification, you can add a catch-all expectation:
+
+```cpp
+using ::testing::AnyNumber;
+using ::testing::_;
+
+EXPECT_CALL(mock_foo, SomeMethod(_)).Times(AnyNumber());
+```
+
+This tells GoogleMock that any calls to `SomeMethod` with any arguments are expected and allowed any number of times, effectively suppressing warnings for that method without wrapping the entire mock in `NiceMock`.
+
+## Best Practices for Mock Strictness
+
+- Prefer **`NiceMock`** when your test only cares about specific interactions and other calls should be ignored.
+- Use **`StrictMock`** in tests where exact call counts and call arguments are critical.
+- When using **`NaggyMock`** or default mocks, resolve warnings by either adding explicit expectations or consciously suppress them with the catch-all `EXPECT_CALL`.
+- Avoid mixing multiple wrappers on the same mock object or nesting wrappers, as this is not supported and can lead to undefined behavior.
+
+## Troubleshooting Mock Strictness
+
+- If you see warnings about uninteresting calls that are expected to be harmless, wrap your mock in `NiceMock` or add a permissive `EXPECT_CALL`.
+- If your test fails due to unexpected calls, check that you have set appropriate `EXPECT_CALL`s covering all expected invocations.
+- Remember that calls matching no `EXPECT_CALL` are always errors in a `StrictMock`.
+
+## Summary of Options
+
+| Wrapper     | Uninteresting Call Behavior                      | Intended Usage                                           |
+| ----------- | ------------------------------------------------ | -------------------------------------------------------- |
+| `NiceMock`  | Silently allows uninteresting calls (no warnings) | Tests lenient about unmocked method calls               |
+| `NaggyMock` (default) | Warns on uninteresting calls                    | Default during development for visibility to unexpected calls |
+| `StrictMock`| Fails tests on uninteresting calls              | Strict verification, catches all deviations             |
+
+## Additional Considerations
+
+- These wrappers propagate the constructors of their base mock class, so you can construct `NiceMock<T>` objects using the same arguments as `T`.
+- They only affect methods mocked directly in the mock class (via `MOCK_METHOD`). Methods inherited from base mocks may not be affected.
+- Proper virtual destructors on your base classes improve compatibility with these wrappers.
+
+## Related Resources
+
+- [Mocking Reference](./mocking.md) — Detailed API for `EXPECT_CALL`, `ON_CALL`, and mock method declarations.
+- [gMock Cookbook](./gmock_cook_book.md) — Recipes on using strictness wrappers and mock behaviors.
+- [Mock Strictness Guide](../guides/practical-testing-patterns/mock-strictness.mdx) — A practical pattern guide to managing strictness in real tests.
+
 ---
 
-## Troubleshooting Common Issues
+<AccordionGroup title="Example Usage Scenarios">
+<Accordion title="Using NiceMock to Suppress Warnings">
+```cpp
+using ::testing::NiceMock;
 
-- **Warning: "Uninteresting function call encountered"**
-  - This indicates a call was made to a mock method without a matching `EXPECT_CALL`.
-  - If expected, wrap the mock with `NiceMock<>` or add a catch-all expectation.
-  - Otherwise, verify if some expectations are missing.
+class MockWidget {
+ public:
+  MOCK_METHOD(void, Initialize, (), ());
+  MOCK_METHOD(void, DoWork, (int value), ());
+};
 
-- **Unexpected call errors despite `ON_CALL` specified**
-  - `ON_CALL` sets default behavior but does *not* establish expectations. Use `EXPECT_CALL` for expected calls.
+TEST(WidgetTest, IgnoresUninterestedCalls) {
+  NiceMock<MockWidget> mock_widget;
+  EXPECT_CALL(mock_widget, Initialize());
 
-- **Tests failing when calls change order unexpectedly**
-  - Verify if unintentional calls are triggering strict mocks.
-  - Use `Sequence` or `InSequence` to control call order.
-  - Relax strictness if needed, or specify expected calls carefully.
+  // DoWork may be called, but we don't care.
+  mock_widget.DoWork(42);  // No warnings
 
-- **Mock leaks leading to missing verification**
-  - If mock objects are leaked and not destroyed, their expectations are never checked.
-  - Use `Mock::AllowLeak(&mock_obj)` to suppress if intentional, else fix ownership.
+  mock_widget.Initialize();  // Verified
+}
+```
+</Accordion>
+<Accordion title="StrictMock to Enforce Exact Calls">
+```cpp
+using ::testing::StrictMock;
+using ::testing::_;  // wildcard matcher
 
-<Note>
-Always set expectations before exercising mocks to avoid undefined behavior.
-</Note>
+class MockService {
+ public:
+  MOCK_METHOD(bool, Connect, (), ());
+  MOCK_METHOD(void, Disconnect, (), ());
+};
+
+TEST(ServiceTest, RequiresExactCalls) {
+  StrictMock<MockService> mock_service;
+
+  EXPECT_CALL(mock_service, Connect()).Times(1);
+  EXPECT_CALL(mock_service, Disconnect()).Times(1);
+
+  mock_service.Connect();
+  mock_service.Disconnect();
+  // If Disconnect() was called twice or additional methods called, test fails.
+}
+```
+</Accordion>
+</AccordionGroup>
+
+## Visualizing Mock Behavior Control
+
+```mermaid
+flowchart TD
+  M["Mock Object"] -->|Uninteresting Call| D(Decision: Mock Wrapper Type)
+  D -->|NiceMock| Allow["Allow silently"]
+  D -->|NaggyMock| Warn["Warn about call"]
+  D -->|StrictMock| Fail["Fail test"]
+
+  Allow --> Continue["Continue test normally"]
+  Warn --> Continue
+  Fail --> Stop["Test Failure"]
+
+  subgraph "Call Types"
+    direction TB
+    U["Uninteresting Call"]
+    E["Expected Call"]
+    X["Unexpected Call"]
+  end
+
+  M -->|Expected Call| Validate["Validate expectations"]
+  M -->|Unexpected Call| Fail
+```
+
 
 ---
 
-## Related Documentation
+## Summary
 
-- [Mocking Reference](./mocking.md) — full details on mocks, expectations, actions.
-- [Creating Mocks](../guides/mocking-best-practices/creating-mocks.md) — how to write mock classes.
-- [Defining Expectations](../guides/mocking-best-practices/defining-expectations.md) — setting call expectations using `EXPECT_CALL` and `ON_CALL`.
-- [Mock Strictness Modes](../guides/mocking-best-practices/mock-strictness-modes.md) — user guide on `NiceMock`, `NaggyMock`, and `StrictMock`.
+Controlling mock behavior using `NiceMock`, `NaggyMock`, and `StrictMock` lets you balance test strictness and flexibility, suppress spurious warnings, or enforce exact call correctness. These wrappers provide fine-tuned control essential to effective mock-based testing.
 
 ---
 
-<Source url="https://github.com/google/googletest" paths='[{"path":"googlemock/include/gmock/gmock.h"},{"path":"googlemock/include/gmock/gmock-spec-builders.h"},{"path":"googlemock/src/gmock-spec-builders.cc"}]' />
+<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/include/gmock/gmock-nice-strict.h", "range": "1-148"}, {"path": "docs/gmock_cheat_sheet.md", "range": "55-150"}, {"path": "docs/gmock_for_dummies.md", "range": "50-220"}]}/>
